--- a/source/index.html
+++ b/source/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Главная</title>
-    <link rel="icon" href="source/favicon.ico">
+    <link rel="icon" href="build/favicon.ico">
     <link rel="icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/apple.png">
     <link rel="manifest" href="manifest.webmanifest">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page-body">
     <div class="container">
@@ -22,7 +22,7 @@
           </picture>
         </a>
 
-        <nav class="main-nav main-nav--closed main-nav--nojs">
+        <nav class="main-nav main-nav--opend main-nav--nojs">
 
           <div class="main-nav__dropdown">
             <button class="main-nav__toggle" type="button" aria-label="Открыть меню"><span class="visually-hidden">Открыть меню</span></button>
@@ -38,6 +38,8 @@
       </header>
 
       <main class="page-main">
+        <h1 class="visually-hidden">Седона</h1>
+
         <section class="promo">
           <div class="promo__inner">
             <picture class="promo__picture">
@@ -49,8 +51,6 @@
             <p class="promo__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
           </div>
         </section>
-
-        <h1 class="visually-hidden">Седона</h1>
 
         <section class="reasons">
           <ul class="reasons__list">
@@ -105,26 +105,26 @@
             <li class="reasons__item reasons__item--brief">
               <ul class="brief-reasons">
                 <li class="brief-reasons__item brief-reasons__item--1">
-                  <div class="reason-card__description">
-                    <h2 class="reason-card__title">Небольшая площадь</h2>
-                    <p class="reason-card__number">&#8212;№3&#8212;</p>
-                    <p class="reason-card__text">Все интересные места находятся очень близко</p>
+                  <div class="brief-reasons__description">
+                    <h2 class="brief-reasons__title">Небольшая площадь</h2>
+                    <p class="brief-reasons__number">&#8212;№3&#8212;</p>
+                    <p class="brief-reasons__text">Все интересные места находятся очень близко</p>
                   </div>
 
                 </li>
                 <li class="brief-reasons__item brief-reasons__item--2">
-                  <div class="reason-card__description">
-                    <h2 class="reason-card__title">Красивая дорога</h2>
-                    <p class="reason-card__number">&#8212;№4&#8212;</p>
-                    <p class="reason-card__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                  <div class="brief-reasons__description">
+                    <h2 class="brief-reasons__title">Красивая дорога</h2>
+                    <p class="brief-reasons__number">&#8212;№4&#8212;</p>
+                    <p class="brief-reasons__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                   </div>
 
                 </li>
                 <li class="brief-reasons__item brief-reasons__item--3">
-                  <div class="reason-card__description">
-                    <h2 class="reason-card__title">Мало туристов</h2>
-                    <p class="reason-card__number">&#8212;№5&#8212;</p>
-                    <p class="reason-card__text">Большинство едет в Гранд Каньон и толпится там</p>
+                  <div class="brief-reasons__description">
+                    <h2 class="brief-reasons__title">Мало туристов</h2>
+                    <p class="brief-reasons__number">&#8212;№5&#8212;</p>
+                    <p class="brief-reasons__text">Большинство едет в Гранд Каньон и толпится там</p>
                   </div>
 
                 </li>
