--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Отзывы</title>
-    <link rel="icon" href="build/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/apple.png">
     <link rel="manifest" href="manifest.webmanifest">
@@ -146,7 +146,8 @@
               <fieldset class="form__user-message user-message">
                 <h2 class="form__subtitle form__subtitle--special"><span>Опишите свои эмоции:</span></h2>
                 <label>
-                  <textarea class="user-message__textarea" aria-label="Отзыв пользователя" placeholder="Опишите подробно все свои восторги"><span class="visually-hidden">Опишите подробно все свои восторги</span></textarea>
+                  <span class="visually-hidden">Опишите подробно все свои восторги</span>
+                  <textarea class="user-message__textarea" aria-label="Отзыв пользователя" placeholder="Опишите подробно все свои восторги"></textarea>
                 </label>
               </fieldset>
 
