--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Главная</title>
-    <link rel="icon" href="build/favicon.ico">
+    <link rel="icon" href="/favicon.ico">
     <link rel="icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/apple.png">
     <link rel="manifest" href="manifest.webmanifest">
@@ -138,7 +138,7 @@
           <div class="offers__inner">
             <h2 class="offers__title">Заинтересовались?</h2>
             <p class="offers__text">Укажите предполагаемые даты поездки,<br class="small-hidden"> и мы покажем вам лучшие предложения гостиниц в седоне</p>
-            <a class="offers__button button" aria-label="Найти гостиницу" href="#">Найти гостиницу</a>
+            <a class="offers__button button" aria-label="Найти гостиницу" href="https://htmlacademy.ru">Найти гостиницу</a>
           </div>
         </section>
 
