--- a/source/index.html
+++ b/source/index.html
@@ -144,12 +144,12 @@
 
         <section class="map">
           <h2 class="visually-hidden">Расположение на карте</h2>
+          <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13565767067!2d-111.83015792770368!3d34.854443815395705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C%20AZ%2086336%2C%20USA!5e0!3m2!1sen!2sru!4v1631538397104!5m2!1sen!2sru" width="100%" height="350" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
           <picture class="map__picture">
             <source media="(min-width: 1200px)" srcset="img/map-desktop.jpg 1x, img/map-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="img/map-tablet.jpg 1x, img/map-mobile@2x.jpg 2x">
             <img class="map__img" src="img/map-mobile.jpg" srcset="img/map-mobile@2x.jpg 2x" alt=" Локация Седоны на карте">
           </picture>
-          <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.38018730558!2d-111.86517855273749!3d34.85435832354931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2spl!4v1626986906413!5m2!1sru!2spl" width="100%" height="350px" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
         </section>
       </main>
 
