--- a/source/index.html
+++ b/source/index.html
@@ -22,13 +22,13 @@
           </picture>
         </a>
 
-        <nav class="main-nav main-nav--opend main-nav--nojs">
+        <nav class="main-nav main-nav--nojs">
 
-          <div class="main-nav__dropdown">
-            <button class="main-nav__toggle" type="button" aria-label="Открыть меню"><span class="visually-hidden">Открыть меню</span></button>
-          </div>
+          <button class="main-nav__toggle main-nav__toggle--nojs" type="button" aria-label="Открыть меню">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
 
-          <ul class="main-nav__list">
+          <ul class="main-nav__list main-nav__list--nojs">
             <li class="main-nav__item main-nav__item--1"><a class="main-nav__link main-nav__link--current" href="index.html">Главная</a></li>
             <li class="main-nav__item main-nav__item--2"><a class="main-nav__link" href="catalog.html">Фото и видео</a></li>
             <li class="main-nav__item main-nav__item--3"><a class="main-nav__link" href="form.html">Форма отзыва</a></li>
