--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Седона/Каталог</title>
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="build/favicon.ico">
     <link rel="icon" href="img/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/apple.png">
     <link rel="manifest" href="manifest.webmanifest">
@@ -22,13 +22,13 @@
           </picture>
         </a>
 
-        <nav class="main-nav main-nav--opend main-nav--nojs">
+        <nav class="main-nav main-nav--nojs">
 
-          <div class="main-nav__dropdown">
-            <button class="main-nav__toggle" type="button" aria-label="Открыть меню"><span class="visually-hidden">Открыть меню</span></button>
-          </div>
+          <button class="main-nav__toggle main-nav__toggle--nojs" type="button" aria-label="Открыть меню">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
 
-          <ul class="main-nav__list">
+          <ul class="main-nav__list main-nav__list--nojs">
             <li class="main-nav__item main-nav__item--1"><a class="main-nav__link" href="index.html">Главная</a></li>
             <li class="main-nav__item main-nav__item--2"><a class="main-nav__link main-nav__link--current" href="catalog.html">Фото и видео</a></li>
             <li class="main-nav__item main-nav__item--3"><a class="main-nav__link" href="form.html">Форма отзыва</a></li>
@@ -47,8 +47,8 @@
             </picture>
           </div>
           <div class="intro__description">
-            <h2 class="intro__title">Фото и видео</h2>
-            <p class="intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+            <h2 class="intro__title intro__title--special">Фото и видео</h2>
+            <p class="intro__text intro__text--special">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
           </div>
         </section>
 
@@ -231,5 +231,6 @@
 
       </footer>
     </div>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
