--- a/source/catalog.html
+++ b/source/catalog.html
@@ -65,6 +65,10 @@
                 <a href="#">
                   <article class="gallery-card">
                     <picture class="gallery-card__picture">
+                      <source type="image/webp" media="(min-width: 1200px)" srcset="img/vastness-desktop.webp 1x, img/vastness-desktop@2x.webp 2x">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/vastness-tablet.webp 1x, img/vastness-tablet@2x.webp 2x">
+                      <source type="image/webp" srcset="img/vastness-mobile.webp 1x, img/vastness-mobile@2x.webp 2x">
+
                       <source media="(min-width: 1200px)" srcset="img/vastness-desktop.jpg 1x, img/vastness-desktop@2x.jpg 2x">
                       <source media="(min-width: 768px)" srcset="img/vastness-tablet.jpg 1x, img/vastness-tablet@2x.jpg 2x">
                       <img class="gallery-card__img" src="img/vastness-mobile.jpg" srcset="img/vastness-mobile@2x.jpg 2x" alt="Неродные просторы">
@@ -88,6 +92,10 @@
                 <a href="#">
                   <article class="gallery-card">
                     <picture class="gallery-card__picture">
+                      <source type="image/webp" media="(min-width: 1200px)" srcset="img/greenery-desktop.webp 1x, img/greenery-desktop@2x.webp 2x">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/greenery-tablet.webp 1x, img/greenery-tablet@2x.webp 2x">
+                      <source type="image/webp" srcset="img/greenery-mobile.webp 1x, img/greenery-mobile@2x.webp 2x">
+
                       <source media="(min-width: 1200px)" srcset="img/greenery-desktop.jpg 1x, img/greenery-desktop@2x.jpg 2x">
                       <source media="(min-width: 768px)" srcset="img/greenery-tablet.jpg 1x, img/greenery-tablet@2x.jpg 2x">
                       <img class="gallery-card__img" src="img/greenery-mobile.jpg" srcset="img/greenery-mobile@2x.jpg 2x" alt="Местная растительность">
@@ -111,6 +119,10 @@
                 <a href="#">
                   <article class="gallery-card">
                     <picture class="gallery-card__picture">
+                      <source type="image/webp" media="(min-width: 1200px)" srcset="img/road-desktop.webp 1x, img/road-desktop@2x.webp 2x">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/road-tablet.webp 1x, img/road-tablet@2x.webp 2x">
+                      <source type="image/webp" srcset="img/road-mobile.webp 1x, img/road-mobile@2x.webp 2x">
+
                       <source media="(min-width: 1200px)" srcset="img/road-desktop.jpg 1x, img/road-desktop@2x.jpg 2x">
                       <source media="(min-width: 768px)" srcset="img/road-tablet.jpg 1x, img/road-tablet@2x.jpg 2x">
                       <img class="gallery-card__img" src="img/road-mobile.jpg" srcset="img/road-mobile@2x.jpg 2x" alt="Дорога на Север">
@@ -134,6 +146,10 @@
                 <a href="#">
                   <article class="gallery-card">
                     <picture class="gallery-card__picture">
+                      <source media="(min-width: 1200px)" srcset="img/bridge-desktop.webp 1x, img/bridge-desktop@2x.webp 2x">
+                      <source media="(min-width: 768px)" srcset="img/bridge-tablet.webp 1x, img/bridge-tablet@2x.webp 2x">
+                      <source type="image/webp" srcset="img/bridge-mobile.webp 1x, img/bridge-mobile@2x.webp 2x">
+
                       <source media="(min-width: 1200px)" srcset="img/bridge-desktop.jpg 1x, img/bridge-desktop@2x.jpg 2x">
                       <source media="(min-width: 768px)" srcset="img/bridge-tablet.jpg 1x, img/bridge-tablet@2x.jpg 2x">
                       <img class="gallery-card__img" src="img/bridge-mobile.jpg" srcset="img/bridge-mobile@2x.jpg 2x" alt="Мост Дьявола">
@@ -164,6 +180,10 @@
           </div>
           <div class="video__content">
             <picture class="video__picture">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop.webp 1x, img/video-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet.webp 1x, img/video-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="iimg/video-mobile.webp 1x, img/video-mobile@2x.webp 2x">
+
               <source media="(min-width: 1200px)" srcset="img/video-desktop.jpg 1x, img/video-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/video-tablet.jpg 1x, img/video-tablet@2x.jpg 2x">
               <img class="video__img" src="img/video-mobile.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Указатель въезда в Седону">
