--- a/source/index.html
+++ b/source/index.html
@@ -48,9 +48,7 @@
 
         <section class="promo">
           <div class="promo__inner">
-            <picture class="promo__picture">
-              <img class="promo__img" src="img/text-index.svg" alt="Название">
-            </picture>
+            <img class="promo__img" src="img/text-index.svg" alt="Название">
           </div>
           <div class="promo__description">
             <h2 class="promo__title">Седона — небольшой городок в Аризоне, заслуживающего большего!</h2>
@@ -159,11 +157,6 @@
         <section class="map">
           <h2 class="visually-hidden">Расположение на карте</h2>
           <iframe class="map__iframe"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44838.27299807609!2d-111.81701922596926!3d34.849687357679436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da69844c84035%3A0xc9ec47f79f1d063b!2sChapel%20of%20the%20Holy%20Cross!5e0!3m2!1sen!2sru!4v1631855712084!5m2!1sen!2sru" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
-          <!-- <picture class="map__picture">
-            <source media="(min-width: 1200px)" srcset="img/map-desktop.jpg 1x, img/map-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="img/map-tablet.jpg 1x, img/map-mobile@2x.jpg 2x">
-            <img class="map__img" src="img/map-mobile.jpg" srcset="img/map-mobile@2x.jpg 2x" alt=" Локация Седоны на карте">
-          </picture> -->
         </section>
       </main>
 
@@ -176,21 +169,21 @@
               <li class="social__item">
                 <a class="social__link social__link--twitter" href="#" aria-label="Твиттер">
                   <svg class="social__icon" width="18" height="15">
-                    <use xlink:href="#icon-twitter"></use>
+                    <use xlink:href="img/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item">
                 <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук">
-                  <svg class="social__icon" width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z" fill="currentColor"/>
+                  <svg class="social__icon" width="9" height="19">
+                    <use xlink:href="img/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social__item">
                 <a class="social__link social__link--youtube" href="#" aria-label="Ютуб">
-                  <svg class="social__icon" width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z" fill="currentColor"/>
+                  <svg class="social__icon" width="20" height="14">
+                    <use xlink:href="img/sprite.svg#icon-youtube"></use>
                   </svg>
                 </a>
               </li>
@@ -199,8 +192,10 @@
 
           <div class="page-footer__copyright copyright">
             <p class="copyright__text">Разработано</p>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип Академии">
-              <svg class="copyright__icon" width="27" height="35" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0zM25 12.1L13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9zM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8zM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9z" fill="currentColor"/></svg>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Переход на курс по адаптивной верстке от Академии">
+              <svg class="copyright__icon" width="27" height="35">
+                <use xlink:href="img/sprite.svg#icon-htmlacademy"></use>
+              </svg>
             </a>
           </div>
         </div>
